# FireBuddyWASM

./: .gitignore  Cargo.toml  README.md  index.html
src/: app_state.rs  common.rs  lib.rs  tests.rs
src/graphics/: camera.rs  mesh.rs  mesh_renderer.rs  mod.rs  shader_manager.rs
src/graphics/frag_shaders/: mod.rs  output_test.rs  simple_unlit.rs  simple_unlit_shaded.rs
src/graphics/programs/: material.rs  mod.rs  unlit_3d.rs
src/graphics/vert_shaders/: mod.rs  vert_shader_3d.rs
src/math/: axis.rs  mat4.rs  mod.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs
src/scene/: mod.rs  scene_node.rs
